# qt-static-linking-error-example

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json  with_disable_deprecated.cpp  without_disable_deprecated.cpp
